# N2D

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  README.md  builder  datasets.py  default.nix  docker.nix  license.txt  main.py  n2d.nix  n2d.py  readme.md  result  setup.cfg  setup.py  shell.nix  umap.nix
.ropeproject/: globalnames  objectdb
docs/: about.rst  conf.py  extending.rst  index.rst  quickstart.rst
docs/_build/doctrees/: about.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  about.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: about.rst.txt  index.rst.txt
examples/: clean.py  datasets.py  densityBased.py  main.py  out.txt  save_load.py  swap.py  swapAE.py
examples/.ropeproject/: globalnames  objectdb
examples/data/har/: README.txt  features_info.txt
examples/data/pendigits/: pendigits.names
examples/stockCluster/: augment.py  clusterStocks.py  preprocess.py
examples/stockCluster/.ropeproject/: globalnames
examples/stockCluster/Data/: data.py  stock_close.csv
n2d/: N2D.py  __init__.py  datasets.py  generators.py  linear_assignment.py  todo.md
n2d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
n2d/.ropeproject/: globalnames  objectdb
nix/: datareader.nix  docker.nix  n2d.nix  transforms3d.nix  umap.nix
