[metadata]
name = n2d

maintainer = David Josephs
maintainer_email = josephsd@smu.edu

version = 0.3.2

description = (Not too) deep clustering
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/josephsdavid/N2D-OOP

license = MIT

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.0

[tool:pytest]
addopts = --cov=./n2d --cov-report html:tests/reports/coverage-html --flake8 --ignore=docs/ --durations=3
doctest_encoding = utf-8

[flake8]
max-line-length = 88
extend-ignore = E203,E501,E231,N806,N803,N802
